[package]
name = "civisgrid"
version = "0.0.1"
authors = ["Ettore Del Negro <ettore@ettoredelnegro.pro>"]
edition = "2018"
default-run = "civisgrid"

[dependencies]
sha3 = "0.8.2"
faster-hex = "0.3.1"
rand = "0.6.5"
websocket-lite = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"